--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -1,19 +1,23 @@
 <div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
 
-  <div class="row py-3">
-    <div class="col-lg-10 col-sm-12">
+  <div class="row pt-3">
+    <div class="col-lg-9 col-sm-12">
         <div class="heading">Correction of Passbook No.</div>
     </div>
-    <div class="col-lg-2 col-sm-12 self-center">
+    <div class="col-lg-3 col-sm-12 self-end">
       <p class="text-right">
-          <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-              <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
-          </button>
+        <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+        aria-expanded="false" aria-controls="collapseExample">
+            <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+            <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+            Advance Filter
+        </button>
         </p>
     </div>
   </div>
 
-  <div class="collapse" id="collapseExample">
+  <div class="collapse show" id="collapseExample">
     <div class="card card-body">
 
 
