--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -1,15 +1,16 @@
 <div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Search Land</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon>
+                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
@@ -19,7 +20,7 @@
     <!-- Header -->
 
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse show" id="collapseExample">
         <div class="card card-body">
     <!-- Header -->
     <div  [formGroup]="landSearch">
@@ -114,22 +115,16 @@
                     </mat-form-field>
                 </div>
             </div>
-
-        </div>
-
-        <div class="row">
             <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                    aria-expanded="false" aria-controls="collapseExample" class="bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                    <button  class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                             type="button" (click)="searchLand()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
                     </button>
                 </div>
             </div>
-
 
         </div>
 
