--- a/src/app/modules/report-managment/location-history/location-history.component.html
+++ b/src/app/modules/report-managment/location-history/location-history.component.html
@@ -4,14 +4,18 @@
 
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Notification Logs</div>
+            <div class="heading">User History</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
                 </button>
               </p>
         </div>
@@ -21,7 +25,7 @@
 
 
 
-      <div class="collapse" id="collapseExample">
+      <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="" [formGroup]="FilterForm">
 
@@ -77,7 +81,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" mat-raised-button class="mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                            <button  mat-raised-button class="mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                                     type="button" (click)="loadUserHistoryPage()">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
