--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -60,7 +60,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
                     <button  class=" mt-2 bg-gray-500 mat-primary" mat-raised-button color="accent"
-                            type="button" (click)="getBorrower()">
+                            type="button" (click)="find()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
                     </button>
