--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -32,15 +32,16 @@
         <div class="card card-body">
             <div class="py-2" [formGroup]="searchCnicForm">
                 <div class="flex" style="flex-wrap: wrap;">
-                        <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true" [is_required_circle]="true"
-                                                    (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true"
+                                            [is_required_circle]="true"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
-
-                        <div class="mx-2">
-                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
+                                <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <mat-select (selectionChange)="value($event)" formControlName="Status">
                                     <mat-option *ngFor="let lov of statusLov" [value]="lov.Value">
                                         {{lov.Description}}
@@ -51,16 +52,16 @@
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                        <button class="bg-gray-500 mt-2"
-                                mat-raised-button color="primary" (click)="find()">
-                            <mat-icon class="mr-2">search</mat-icon>
-                            Find
-                        </button>
-                    </div>
+                            <button class="bg-gray-500 mt-2"
+                                    mat-raised-button color="primary" (click)="find()">
+                                <mat-icon class="mr-2">search</mat-icon>
+                                Find
+                            </button>
+                        </div>
                     </div>
 
 
-            </div>
+                </div>
             </div>
 
         </div>
@@ -87,15 +88,15 @@
                 matSortDisableClear
             >
 
-            <ng-container matColumnDef="Branch">
-                <mat-header-cell *matHeaderCellDef
-                >Branch Name
-                </mat-header-cell
-                >
-                <mat-cell *matCellDef="let report">{{
-                    report.BranchName
-                    }}</mat-cell>
-            </ng-container>
+                <ng-container matColumnDef="Branch">
+                    <mat-header-cell *matHeaderCellDef
+                    >Branch Name
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.BranchName
+                        }}</mat-cell>
+                </ng-container>
 
                 <ng-container matColumnDef="Lcno">
                     <mat-header-cell *matHeaderCellDef
@@ -164,6 +165,15 @@
                     >
                     <mat-cell *matCellDef="let report">{{
                         report.LoanOutStanding
+                        }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="OtherCharges">
+                    <mat-header-cell *matHeaderCellDef
+                    >Other Charges
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report?.OtherCharges
                         }}</mat-cell>
                 </ng-container>
 
