--- a/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
+++ b/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
@@ -32,19 +32,19 @@
         <div class="card card-body">
             <div class="py-2" [formGroup]="searchCnicForm">
                 <div class="flex" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true" [is_required_circle]="true"
-                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true"
+                                            [is_required_circle]="true"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
-
-                <div class="mx-2">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                        <button class="mt-2 bg-gray-500" 
-                                mat-raised-button color="primary" (click)="find()">
-                            <mat-icon class="mr-2">search</mat-icon>
-                            Find
-                        </button>
-                    </div>
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                            <button class="mt-2 bg-gray-500"
+                                    mat-raised-button color="primary" (click)="find()">
+                                <mat-icon class="mr-2">search</mat-icon>
+                                Find
+                            </button>
+                        </div>
                     </div>
 
                 </div>
@@ -143,6 +143,16 @@
                     >
                     <mat-cell *matCellDef="let report">{{
                         report.LoanOutStanding
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="OtherCharges">
+                    <mat-header-cell *matHeaderCellDef
+                    >Other Charges
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report?.OtherCharges
                         }}</mat-cell>
                 </ng-container>
 
