--- a/src/app/modules/auth/otp/otp.component.html
+++ b/src/app/modules/auth/otp/otp.component.html
@@ -1,59 +1,64 @@
 <!--begin::Body-->
-	<div class="kt-login__body">
-		<!--begin::Signin-->
+<div class="kt-login__body">
+    <!--begin::Signin-->
 
 
+    <div class="kt-login__form">
+        <div class="row">
+            <div class="col-lg-12 text-center mb-1">
+                <img src="./assets/media/icons/chat-01.png" class="img-responsive center-block w-10 mx-auto"
+                     alt="icon"/>
+            </div>
+        </div>
 
-		<div class="kt-login__form">
-			<div class="row">
-			<div class="col-lg-12 text-center mb-1">
-				<img src="./assets/media/icons/chat-01.png" class="img-responsive center-block w-10 mx-auto" alt="icon" />
-			</div>
-		</div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="kt-login__title">
+                    <!--<h3>{{ 'AUTH.FORGOT.TITLE' | translate }}</h3>-->
+                    <span class="font-bold">Enter OTP</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="kt-form" [formGroup]="otpForm" autocomplete="off">
+                    <div class="form-group mb-4">
+                        <mat-form-field appearance="outline">
+                            <!--<mat-label>{{ 'AUTH.INPUT.EMAIL' | translate }}</mat-label>-->
+                            <mat-label>OTP</mat-label>
+                            <input appNumberOnly matInput type="text" placeholder="OTP" formControlName="otp"
+                                   autocomplete="off"/>
+                            <mat-error *ngIf="isControlHasError('otp','required')">
+                                <strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
+                            </mat-error>
+                            <mat-error *ngIf="isControlHasError('otp','minLength')">
+                                <strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
+                            </mat-error>
+                            <mat-error *ngIf="isControlHasError('otp','maxLength')">
+                                <strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 320</strong>
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
+                    <!--begin::Action-->
+                    <div class="kt-login__actions float-right mr-2">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <button id="kt_login_signup_cancel" (click)="onCloseClick(0)">
+                                    <mat-icon class="mr-2">cancel</mat-icon>
+                                    {{'Close'}} </button>
+                                <button (click)="submit()" id="kt_login_signin_submit"
+                                        class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                        [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">{{'Submit'}}</button>
+                            </div>
+                        </div>
 
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="kt-login__title">
-					<!--<h3>{{ 'AUTH.FORGOT.TITLE' | translate }}</h3>-->
-					<span class="font-bold">Enter OTP</span>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<form class="kt-form" [formGroup]="otpForm" autocomplete="off">
-					<div class="form-group mb-4">
-						<mat-form-field appearance="outline">
-							<!--<mat-label>{{ 'AUTH.INPUT.EMAIL' | translate }}</mat-label>-->
-							<mat-label>OTP</mat-label>
-							<input appNumberOnly matInput type="text" placeholder="OTP" formControlName="otp" autocomplete="off" />
-							<mat-error *ngIf="isControlHasError('otp','required')">
-								<strong>{{ 'AUTH.VALIDATION.REQUIRED_FIELD' | translate }}</strong>
-							</mat-error>
-							<mat-error *ngIf="isControlHasError('otp','minLength')">
-								<strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 3</strong>
-							</mat-error>
-							<mat-error *ngIf="isControlHasError('otp','maxLength')">
-								<strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 320</strong>
-							</mat-error>
-						</mat-form-field>
-					</div>
-					<!--begin::Action-->
-					<div class="kt-login__actions float-right mr-2">
-						<div class="row">
-							<div class="col-lg-12">
-								<button routerLink="/auth/login" [disabled]="loading" id="kt_login_signup_cancel" (click)="onCloseClick(0)" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"><mat-icon class="mr-2">cancel</mat-icon>{{'Close'}} </button>
-								<button (click)="submit()" id="kt_login_signin_submit" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">{{'Submit'}}</button>
-							</div>
-						</div>
-
-					</div>
-					<!--end::Action-->
-				</form>
-			</div>
-		</div>
+                    </div>
+                    <!--end::Action-->
+                </form>
+            </div>
+        </div>
 
 
-		</div>
-	</div>
+    </div>
+</div>
 
