--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -35,6 +35,14 @@
             (click)="toggleNavigation('mainNavigation')">
             <mat-icon [svgIcon]="'heroicons_outline:menu'"></mat-icon>
         </button>
+
+
+        <span class="flex ml-4  ">
+            <span class=" text-md font-bold">User Name : <span class=" text-sm ml-1 font-medium text-green">{{user?.DisplayName}}</span></span>
+             <span class=" text-md font-bold ml-4 ">PPNo. :<span class=" text-sm ml-1 font-medium text-green">{{user?.UserName}}</span></span>
+            <span class=" text-md font-bold ml-4">Branch Name :<span class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
+        </span>
+
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
             <!--            <languages></languages>-->
