--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -38,7 +38,7 @@
 
 
         <span class="flex ml-4  ">
-            <span class=" text-md font-bold">User Name : <span class=" text-sm ml-1 font-medium text-green">{{user?.DisplayName}}</span></span>
+            <span class=" text-md font-bold">Name : <span class=" text-sm ml-1 font-medium text-green">{{user?.DisplayName}}</span></span>
              <span class=" text-md font-bold ml-4 ">PPNo. :<span class=" text-sm ml-1 font-medium text-green">{{user?.UserName}}</span></span>
             <span class=" text-md font-bold ml-4">Branch Name :<span class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
         </span>
