--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -26,9 +26,9 @@
     #userActions="matMenu">
     <button mat-menu-item>
         <span class="flex flex-col leading-none ">
-            <span class="mt-1.5 text-md font-medium">User Name :{{user?.DisplayName}}</span>
+            <span class="mt-1.5 text-md font-medium">Name :{{user?.DisplayName}}</span>
              <span class="mt-1.5 text-md font-medium">PPNo. :{{user?.UserName}}</span>
-            <span class="mt-1.5 text-md font-medium">Branch Name :{{user?.BranchName}}</span>
+<!--            <span class="mt-1.5 text-md font-medium">Branch Name :{{user?.BranchName}}</span>-->
         </span>
     </button>
     <mat-divider class="my-2"></mat-divider>
