--- a/src/app/modules/auth/otp/otp.component.html
+++ b/src/app/modules/auth/otp/otp.component.html
@@ -4,9 +4,15 @@
 
 
     <div class="kt-login__form">
+		<div class="row">
+			<div class="col-lg-12 text-end">
+				<button type="button"  id="kt_login_signup_cancel" (click)="onCloseClick(0)">
+					<mat-icon class="text-danger">cancel</mat-icon></button>
+			</div>
+		</div>
         <div class="row">
             <div class="col-lg-12 text-center mb-1">
-                <img src="./assets/media/icons/chat-01.png" class="img-responsive center-block w-10 mx-auto"
+                <img src="./assets/media/icons/chat-01.png" class="img-responsive center-block w-16 mx-auto"
                      alt="icon"/>
             </div>
         </div>
@@ -22,7 +28,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <form class="kt-form" [formGroup]="otpForm" autocomplete="off">
-                    <div class="form-group my-2">
+                    <div class="form-group my-2 mb-0">
                         <mat-form-field class="w-full" appearance="outline">
                             <!--<mat-label>{{ 'AUTH.INPUT.EMAIL' | translate }}</mat-label>-->
                             <mat-label>OTP</mat-label>
@@ -43,14 +49,12 @@
                     <div class="kt-login__actions float-right">
                         <div class="row">
                             <div class="col-lg-6 text-end">
-                                <button type="button" mat-raised-button class="mat-focus-indicator btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger" id="kt_login_signup_cancel" (click)="onCloseClick(0)">
-                                   <mat-icon class="mr-2">cancel</mat-icon>
-                                    {{'Close'}} </button>
+
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
 
                                 <button (click)="submit()" id="kt_login_signin_submit"
-                                        class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
+                                        class="w-100 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                                         [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"><mat-icon class="mr-2">check_circle</mat-icon>{{'Submit'}}</button>
                             </div>
 
