--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -127,6 +127,12 @@
                 </ng-container>
 
                 <!-- Title Column -->
+                <ng-container matColumnDef="ApproximateDistance">
+                    <th mat-header-cell *matHeaderCellDef>Approximate Distance</th>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.ApproximateDistance}}</td>
+                </ng-container>
+
+                <!-- Title Column -->
                 <ng-container matColumnDef="BranchCode">
                     <th mat-header-cell *matHeaderCellDef>Branch Code</th>
                     <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories.BranchCode}}</td>
