--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -127,9 +127,9 @@
                 </ng-container>
 
                 <!-- Title Column -->
-                <ng-container matColumnDef="ApproximateDistance">
-                    <th mat-header-cell *matHeaderCellDef>Approximate Distance</th>
-                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.ApproximateDistance}}</td>
+                <ng-container matColumnDef="ApproxDistanceTraveled">
+                    <th mat-header-cell *matHeaderCellDef>Approximate Distance Traveled</th>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.ApproxDistanceTraveled}}</td>
                 </ng-container>
 
                 <!-- Title Column -->
